--- a/day14/public/index.html
+++ b/day14/public/index.html
@@ -17,7 +17,7 @@
     </div>
     <input id="sender" name="sender" placeholder="Ad" type="text">
     <input id="message" name="message" placeholder="Mesaj" type="text"/>
-    <button type="submit">Send</button>
+    <button type="submit" id="submitButton">Send</button>
 </div>
 <script charset="UTF-8" src="chat.js"></script>
 </body>
